--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: bash
 services: docker
 
 env:
-  - VERSION=7.2-rc VARIANT=stretch/cli
-  - VERSION=7.2-rc VARIANT=stretch/apache
-  - VERSION=7.2-rc VARIANT=stretch/fpm
-  - VERSION=7.2-rc VARIANT=stretch/zts
-  - VERSION=7.2-rc VARIANT=alpine3.6/cli
-  - VERSION=7.2-rc VARIANT=alpine3.6/fpm
-  - VERSION=7.2-rc VARIANT=alpine3.6/zts
+  - VERSION=7.2 VARIANT=stretch/cli
+  - VERSION=7.2 VARIANT=stretch/apache
+  - VERSION=7.2 VARIANT=stretch/fpm
+  - VERSION=7.2 VARIANT=stretch/zts
+  - VERSION=7.2 VARIANT=alpine3.6/cli
+  - VERSION=7.2 VARIANT=alpine3.6/fpm
+  - VERSION=7.2 VARIANT=alpine3.6/zts
   - VERSION=7.1 VARIANT=jessie/cli
   - VERSION=7.1 VARIANT=jessie/apache
   - VERSION=7.1 VARIANT=jessie/fpm
