--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ env:
   - VERSION=7.2 VARIANT=stretch/apache
   - VERSION=7.2 VARIANT=stretch/fpm
   - VERSION=7.2 VARIANT=stretch/zts
+  - VERSION=7.2 VARIANT=alpine3.7/cli
+  - VERSION=7.2 VARIANT=alpine3.7/fpm
+  - VERSION=7.2 VARIANT=alpine3.7/zts
   - VERSION=7.2 VARIANT=alpine3.6/cli
   - VERSION=7.2 VARIANT=alpine3.6/fpm
   - VERSION=7.2 VARIANT=alpine3.6/zts
