Block the installation of Debian's PHP packages
This will hopefully help folks with the confusion around installing packages like "php-apcu" and then wondering why they don't actually "work" (because they pull in Debian's PHP, and that's not what this image packages).

--- a/5.6/jessie/apache/Dockerfile
+++ b/5.6/jessie/apache/Dockerfile
@@ -6,6 +6,14 @@
 
 FROM debian:jessie
 
+# prevent Debian's PHP packages from being installed
+RUN set -eux; \
+	{ \
+		echo 'Package: php*'; \
+		echo 'Pin: release  *'; \
+		echo 'Pin-Priority: -1'; \
+	} > /etc/apt/preferences.d/no-debian-php
+
 # persistent / runtime deps
 ENV PHPIZE_DEPS \
 		autoconf \
