--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -1,5 +1,13 @@
 FROM debian:%%DEBIAN_SUITE%%
 
+# prevent Debian's PHP packages from being installed
+RUN set -eux; \
+	{ \
+		echo 'Package: php*'; \
+		echo 'Pin: release  *'; \
+		echo 'Pin-Priority: -1'; \
+	} > /etc/apt/preferences.d/no-debian-php
+
 # persistent / runtime deps
 ENV PHPIZE_DEPS \
 		autoconf \
