--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -109,6 +109,9 @@ RUN set -xe \
 		\
 		--disable-cgi \
 		\
+# https://github.com/docker-library/php/issues/439
+		--disable-hash \
+		\
 # --enable-ftp is included here because ftp_ssl_connect() needs ftp to be compiled statically (see https://github.com/docker-library/php/issues/236)
 		--enable-ftp \
 # --enable-mbstring is included here because otherwise there's no way to get pecl to use it properly (see https://github.com/docker-library/php/issues/195)
