--- a/Dockerfile-debian.template
+++ b/Dockerfile-debian.template
@@ -131,7 +131,7 @@ RUN set -eux; \
 		--disable-cgi \
 		\
 # https://github.com/docker-library/php/issues/439
-		--disable-hash \
+		--with-mhash \
 		\
 # --enable-ftp is included here because ftp_ssl_connect() needs ftp to be compiled statically (see https://github.com/docker-library/php/issues/236)
 		--enable-ftp \
